# optimization-project

./: README.md
linear-programming/simplex-solver/python/: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
linear-programming/simplex-solver/python/benchmarks/: benchmark_test.py
linear-programming/simplex-solver/python/src/: linprog.py  problems.py  simplex.py
linear-programming/simplex-solver/python/tests/: test_linprog.py  test_simplex.py
linear-programming/simplex-solver/rust/: README.md
